--- a/deal/config.ini
+++ b/deal/config.ini
@@ -4,3 +4,11 @@ port = 7788
 dbname = goods
 user = hanyu
 pwd = 123456
+
+[mysql]
+host = mall123456.mysql.rds.aliyuncs.com
+port = 3306
+dbname = mall
+user = root
+pwd = zc!@#616
+charset = utf8
